# multimodal-rag

./: .gitignore  CLAUDE.md  Makefile  PRD.md  README.md  compose.yaml  pyproject.toml
config/: .env.example  development.env  sources.yaml
docs/: Openrouter_model_cost.md  PRD.md  debugging-ingestion.md  epics.md  ingestion-bug-report.md  session-log-2026-03-12.md
src/multimodal_rag/: __init__.py  __main__.py  app.py  ingest.py
src/multimodal_rag/ingest/: __init__.py  __main__.py  video_frames.py  voxtral.py  web.py  web_images.py  youtube.py
src/multimodal_rag/models/: __init__.py  chunks.py  config.py  llm.py  query.py  sources.py
src/multimodal_rag/query/: __init__.py  generator.py  retriever.py
src/multimodal_rag/store/: __init__.py  embeddings.py  weaviate.py
tests/: test_app.py  test_generator.py  test_ingest_cli.py  test_llm.py  test_models.py  test_placeholder.py  test_retriever.py  test_store.py  test_video_frames.py  test_voxtral_ingest.py  test_web_images.py  test_web_ingest.py  test_youtube_ingest.py
