[project]
name = "multimodal-rag"
version = "0.1.0"
description = "RAG-powered support knowledge base with video timestamp citations"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.0.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "weaviate-client>=4.0.0",
    "youtube-transcript-api>=1.0.0",
    "openai>=1.6.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "firecrawl-py>=1.0.0",
    "pyyaml>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
lint.select = ["E", "W", "F", "I"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
no_implicit_reexport = true
ignore_missing_imports = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]
